styled the section-2. had issues with the 4 containers; makking sure that the image did not overflow beyond the width specified on the parent div. resolved using max-wid: 100% on the images.

--- a/style.css
+++ b/style.css
@@ -75,3 +75,34 @@ ul {
     border-radius: 5px;
     cursor: pointer;
 }
+
+/* style section-2 */
+.section-2{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+    padding-top: 50px;
+}
+.info-head{
+    font-size: 36px;
+    font-weight: 900;
+}
+.sub-section-2{
+    display: flex;
+    gap: 30px;
+}
+.container{
+    width: 250px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.container > img{
+    max-width: 100%;
+    border-radius: 10px;
+}
+.container > p{
+    text-align: center;
+}
